--- a/quote-machine/index.html
+++ b/quote-machine/index.html
@@ -18,7 +18,7 @@
 			<p id="quote">Read random comments from YouTube. Click the "New" button to get started!</p>
 		</article>
 		<footer>
-			<small><a href="http://www.howardcshaw.com">Howard Shaw</a></small>
+			<small><a href="/">Howard Shaw</a></small>
 		</footer>
 	</div>
 	<script src="../js/jquery-2.2.3.min.js"></script>
