--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -66,7 +66,7 @@
 		</aside>
 		<footer>
 			<ul>
-				<li>Design By: <a href="http://howardcshaw.com">Howard Shaw</a></li>
+				<li>Design By: <a href="/">Howard Shaw</a></li>
 				<li>Image Source: <span class="img-links"><a href="http://www.monsterchildren.com/20960/interview-rodney-mullen/">1</a> <a href="http://www.almostskateboards.com/blog/wired-x-rodney-mullen">2</a> <a href="http://juliendouvier.tumblr.com/post/133596456261/skateboarding-to-the-infinity">3</a></span></li>
 			</ul>
 		</footer>
