app functionality done

--- a/wa-resources/index.html
+++ b/wa-resources/index.html
@@ -87,6 +87,12 @@
 		<div id="eq-loading-overlay" class="app-loading-overlay">
 			<p>Loading...</p>
 		</div>
+		<div id="eq-saved-overlay" class="app-loading-overlay">
+			<p>Settings Saved</p>
+		</div>
+		<div id="eq-no-wa-overlay" class="app-no-wa-overlay">
+			<p>Your browser does not support the Web Audio API, which is required to run this application. Please try opening this page in a different browser. I recommend <a href="https://www.google.com/chrome/browser/desktop/index.html">Google Chrome</a> or <a href="https://www.mozilla.org/en-US/firefox/new/">FireFox</a>.</p>
+		</div>
 	</div>
 	<script src="../js/jquery-2.2.3.min.js"></script>
 	<script src="wa_resources.js"></script>
