--- a/local-weather/index.html
+++ b/local-weather/index.html
@@ -8,6 +8,7 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
+	<p id="content"></p>
 	<script src="weather.js"></script>
 </body>
 </html>
