--- a/wiki-viewer/index.html
+++ b/wiki-viewer/index.html
@@ -8,6 +8,16 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
+	<div id="wrapper">
+		<h1>Search Wikipedia</h1>
+		<div id="search-wrap">
+			<input type="text" id="search-bar">
+			<button id="search-button">Search</button>
+		</div>
+		<div id="results"></div>
+		<button id="load-more" disabled>Load More Results</button>
+	</div>
+
 	<script src="wiki.js"></script>
 </body>
 </html>
