wiki viewer functionality done

--- a/wiki-viewer/index.html
+++ b/wiki-viewer/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="wrapper">
-		<h1>Search Wikipedia</h1>
+		<h1>Search Wi<a href="https://en.wikipedia.org/wiki/Special:Random">k</a>ipedia</h1>
 		<div id="search-wrap">
 			<input type="text" id="search-bar">
 			<button id="search-button">Search</button>
