testing web app ios safari

--- a/wa-resources/index.html
+++ b/wa-resources/index.html
@@ -5,6 +5,7 @@
 	<title>EQ Ear Training</title>
 	<meta name="description" content="Train your ears to detect boosts and reductions of specific frequency ranges by practicing reference EQ.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link href="style.css" rel="stylesheet">
 	<link href="wa_resources.css" rel="stylesheet">
 </head>
