testing touchstart on wa-resources controls

--- a/eq-curve-test/index.html
+++ b/eq-curve-test/index.html
@@ -106,7 +106,7 @@
 		</div>
 	</div>
 	<script src="../js/jquery-2.2.3.min.js"></script>
-	<script src="wa_resources.js"></script>
+	<script src="../wa-resources/wa_resources.js"></script>
 	<script src="eq2.js"></script>
 </body>
 </html>
