--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="about-container">
 				<div class="img-wrap">
 					<img
-					src="me.png"
+					src="me.jpg"
 					alt="A picture of me"
 					>
 					<div class="img-overlay"></div>
