tic-tac-toe test

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -8,6 +8,31 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
+
+	<div id="wrapper">
+		<h1>Tic Tac Toe</h1>
+		<div id="board">
+			<div id="square-0" class="square"><div class="x"></div><div class="o"></div></div>
+			<div id="square-1" class="square"><div class="x"></div><div class="o"></div></div>
+			<div id="square-2" class="square"><div class="x"></div><div class="o"></div></div>
+			<div id="square-3" class="square"><div class="x"></div><div class="o"></div></div>
+			<div id="square-4" class="square"><div class="x"></div><div class="o"></div></div>
+			<div id="square-5" class="square"><div class="x"></div><div class="o"></div></div>
+			<div id="square-6" class="square"><div class="x"></div><div class="o"></div></div>
+			<div id="square-7" class="square"><div class="x"></div><div class="o"></div></div>
+			<div id="square-8" class="square"><div class="x"></div><div class="o"></div></div>
+
+			<div id="choose-token">
+				<h2>Choose Your Character</h2>
+				<div id="choose-x" class="square has-x"><div class="x"></div></div><!--
+				--><div id="choose-o" class="square has-o"><div class="o"></div></div>
+			</div>
+			<div id="game-end-screen" class="hidden">
+				<h2 id="game-over-text"></h2>
+				<button id="play-again">Play Again?</button>
+			</div>
+		</div>
+	</div>
 	
 	<script src="tic-tac-toe.js"></script>
 </body>
