tic-tac-toe test

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -29,7 +29,7 @@
 			</div>
 			<div id="game-end-screen" class="hidden">
 				<h2 id="game-over-text"></h2>
-				<button id="play-again">Play Again?</button>
+				<button id="play-again">Play Again</button>
 			</div>
 		</div>
 	</div>
