tic tac toe responsive

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -5,6 +5,7 @@
 	<title>Tic Tac Toe</title>
 	<meta name="description" content="Play Tic Tac Toe">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -23,7 +24,7 @@
 			<div id="square-8" class="square"><div class="x"></div><div class="o"></div></div>
 
 			<div id="choose-token">
-				<h2>Choose Your Character</h2>
+				<h2>Choose Your Character:</h2>
 				<div id="choose-x" class="square has-x"><div class="x"></div></div><!--
 				--><div id="choose-o" class="square has-o"><div class="o"></div></div>
 			</div>
