tic tac toe can use tab

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -25,12 +25,12 @@
 
 			<div id="choose-token">
 				<h2>Choose Your Character:</h2>
-				<div id="choose-x" class="square has-x"><div class="x"></div></div><!--
-				--><div id="choose-o" class="square has-o"><div class="o"></div></div>
+				<div id="choose-x" class="square has-x" tabindex="0"><div class="x"></div></div><!--
+				--><div id="choose-o" class="square has-o" tabindex="0"><div class="o"></div></div>
 			</div>
 			<div id="game-end-screen" class="hidden">
 				<h2 id="game-over-text"></h2>
-				<button id="play-again">Play Again</button>
+				<button id="play-again" tabindex="-1">Play Again</button>
 			</div>
 		</div>
 	</div>
