some updates and tests

--- a/wiki-viewer/index.html
+++ b/wiki-viewer/index.html
@@ -8,8 +8,9 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
+	<div id="background"></div>
 	<div id="wrapper">
-		<h1>Search Wi<a href="https://en.wikipedia.org/wiki/Special:Random">k</a>ipedia</h1>
+		<h1><span id="main-title">Search Wi<a href="https://en.wikipedia.org/wiki/Special:Random" id="link-letter">k</a>ipedia</span></h1>
 		<div id="search-wrap">
 			<input type="text" id="search-bar">
 			<button id="search-button">Search</button>
