--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					>
 					<div class="img-overlay"></div>
 				</div>
-				<p>Hi! I'm Howard, a front-end developer and electronic music producer. So far, my experience in development primarily consists of responsive design using HTML5, CSS3 and some jQuery. Because of my interest in music, I've also built some applications using the Web Audio API, Canvas, and JavaScript. I've also built a website using Django for the back end. You can find this in my portfolio labeled as "Full Stack."</p>
+				<p>Hi! I'm Howard, a front-end developer and electronic musician. My favorite kind of projects are interactive applications for the browser that get me writing a lot of JavaScript. Due to my interest in music, I've built a couple of web apps using the Web Audio API and HTML5 Canvas. I have a solid knowledge of responsive design using media queries, and some experience with Django for the back end. You can view some of my work in the portfolio below.</p>
 			</div>
 		</div>
 	</section>
@@ -47,19 +47,19 @@
 						<div class="project-overlay"></div>
 						<span>Full Stack</span>
 				</a><!--
-				--><a href="#" id="pa-two" class="project">
+				--><a href="wa-resources" id="pa-eq" class="project">
 						<div class="project-background">
 							<!--ear training-->
 						</div>
 						<div class="project-overlay"></div>
 						<span>Web Audio</span>
 				</a><!--
-				--><a href="#" id="pa-three" class="project">
+				--><a href="wiki-viewer" id="pa-wiki" class="project">
 						<div class="project-background">
 							<!--interactive tut-->
 						</div>
 						<div class="project-overlay"></div>
-						<span>HTML5 Media</span>
+						<span>Wikipedia API</span>
 				</a><!--
 				--><a href="tribute-page/" id="pa-tribute" class="project">
 						<div class="project-background"></div>
