--- a/stereo-test/index.html
+++ b/stereo-test/index.html
@@ -7,6 +7,8 @@
 	<main>
 		<canvas id="content" width="500" height="500"></canvas>
 		<canvas id="peak" width="50" height="500"></canvas>
+		<canvas id="spectro" height="720" with="210"></canvas>
+		<canvas id="level" width="720" height="210"></canvas>
 		<button id="btn">get</button>
 	</main>
 	<script src="../js/jquery-2.2.3.min.js"></script>
