--- a/compression/index.html
+++ b/compression/index.html
@@ -5,8 +5,9 @@
 	<title>EQ Ear Training</title>
 	<meta name="description" content="Train your ears to detect boosts and reductions of specific frequency ranges by practicing reference EQ.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link href="style.css" rel="stylesheet">
-	<link href="wa_resources.css" rel="stylesheet">
+	<link href="../wa-resources/wa_resources.css" rel="stylesheet">
 </head>
 <body>
 	<div id="eq-container" class="app-container">
@@ -35,17 +36,6 @@
 			<div id="frequency" class="knob" tabindex="0"></div>
 			<span>FREQ</span>
 			<div id="bandwidth" class="knob" tabindex="0"></div>
-			<span>Q</span><!--
-	 --></div><!--
-	 --><div id="parameters2">
-			<div id="filter-type2" tabindex="0"></div>
-			<div id="level2" class="bipolar-vertical-slider" tabindex="0">
-				<div class="range"></div>
-				<div class="handle"></div>
-			</div>
-			<div id="frequency2" class="knob" tabindex="0"></div>
-			<span>FREQ</span>
-			<div id="bandwidth2" class="knob" tabindex="0"></div>
 			<span>Q</span><!--
 	 --></div>
 		<div id="bottom-controls" class="app-bottom-controls">
@@ -107,6 +97,6 @@
 	</div>
 	<script src="../js/jquery-2.2.3.min.js"></script>
 	<script src="../wa-resources/wa_resources.js"></script>
-	<script src="eq2.js"></script>
+	<script src="compression.js"></script>
 </body>
 </html>
