updated ear training

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<div class="project-overlay"></div>
 						<span>Full Stack</span>
 				</a><!--
-				--><a href="https://www.earinstructor.com" id="pa-eq" class="project">
+				--><a href="wa-resources/" id="pa-eq" class="project">
 						<div class="project-background">
 							<!--ear training-->
 						</div>
