cipher fixes for mobile

--- a/cipher/index.html
+++ b/cipher/index.html
@@ -17,7 +17,7 @@
 		<button class="button" id="encrypt">Encrypt</button><!--
 		--><button class="button" id="decrypt">Decrypt</button>
 		<h2>Output:</h2>
-		<textarea id="output"></textarea>
+		<textarea id="output" onfocus="this.select()"></textarea>
 		<button class="button" id="copy">Select All</button>
 
 		<script src="../js/jquery-2.2.3.min.js"></script>
