--- a/quote-machine/index.html
+++ b/quote-machine/index.html
@@ -17,13 +17,9 @@
 		*{ box-sizing: inherit;}
 
 		body{
-			font-family: sans-serif;
+			font-family: 'Roboto', sans-serif;
 			margin: 0;
 			background-color: #607D8B;
-		}
-
-		body.font-loaded{
-			font-family: 'Roboto', sans-serif;
 		}
 
 		#wrapper{
@@ -188,6 +184,7 @@
 		}
 	</style>
 	<link href="../css/font-awesome.min.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div id="wrapper">
