--- a/quote-machine/index.html
+++ b/quote-machine/index.html
@@ -162,6 +162,9 @@
 			text-decoration: underline;
 			outline: none;
 		}
+		#quote.loading a {
+		    opacity: 0.66;
+		}
 
 		footer{
 			position: absolute;
