--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 					>
 					<div class="img-overlay"></div>
 				</div>
-				<p>Hi! I'm Howard, a front-end developer and electronic musician. My favorite kind of projects are interactive applications for the browser that get me writing a lot of JavaScript. Due to my interest in music, I've built a couple of web apps using the Web Audio API and HTML5 Canvas. I have a solid knowledge of responsive design using media queries, and some experience with Django for the back end. You can view some of my work in the portfolio below.</p>
+				<p>Hi! I'm Howard, a front-end developer and electronic musician. My favorite kind of projects are interactive applications for the browser that get me writing a lot of JavaScript. Due to my interest in music, I've built a couple of web apps using the Web Audio API and HTML5 Canvas. I have a solid knowledge of responsive design using media queries, and some experience with Django for the back end. You can view some of my work in the portfolio below.
+				<br>
+				<span><a href="https://github.com/ivthefourth">GitHub</a></span><span><a href="howardshaw.pdf">Résumé</a></span></p>
 			</div>
 		</div>
 	</section>
@@ -40,39 +42,33 @@
 		<div class="content-wrap">
 			<h2>Projects</h2>
 			<div class="projects-container">
-				<a href="https://www.beatschool.io" id="pa-beatschool"  class="project">
-						<div class="project-background">
-							<!--beatschool.io-->
-						</div>
+				<a href="https://www.beatschool.io" class="project">
+						<img src="beatschool.jpg" class="project-image" alt="Screenshot of full stack project">
 						<div class="project-overlay"></div>
 						<span>Full Stack</span>
 				</a><!--
-				--><a href="wa-resources/" id="pa-eq" class="project">
-						<div class="project-background">
-							<!--ear training-->
-						</div>
+				--><a href="wa-resources/" class="project">
+						<img src="eq.jpg" class="project-image" alt="Screenshot of Web Audio project">
 						<div class="project-overlay"></div>
 						<span>Web Audio</span>
 				</a><!--
-				--><a href="wiki-viewer" id="pa-wiki" class="project">
-						<div class="project-background">
-							<!--interactive tut-->
-						</div>
+				--><a href="wiki-viewer" class="project">
+						<img src="wiki.jpg" class="project-image" alt="Screenshot of Wikipedia API project">
 						<div class="project-overlay"></div>
 						<span>Wikipedia API</span>
 				</a><!--
-				--><a href="tribute-page/" id="pa-tribute" class="project">
-						<div class="project-background"></div>
+				--><a href="tribute-page/" class="project">
+						<img src="tribute.jpg" class="project-image" alt="Screenshot of responsive design project">
 						<div class="project-overlay"></div>
 						<span>Responsive Design</span>
 				</a><!--
-				--><a href="tic-tac-toe" id="pa-tic-tac-toe" class="project">
-						<div class="project-background"></div>
+				--><a href="tic-tac-toe" class="project">
+						<img src="tic-tac-toe.jpg" class="project-image" alt="Screenshot of Tic Tac Toe project">
 						<div class="project-overlay"></div>
 						<span>Tic Tac Toe</span>
 				</a><!--
-				--><a href="cipher/" id="pa-cipher" class="project">
-						<div class="project-background"></div>
+				--><a href="cipher/" class="project">
+						<img src="cipher.jpg" class="project-image" alt="Screenshot of text cipher project">
 						<div class="project-overlay"></div>
 						<span>Text Cipher</span>
 				</a>
