--- a/wiki-viewer/index.html
+++ b/wiki-viewer/index.html
@@ -16,6 +16,7 @@
 			<button id="search-button">Search</button>
 		</div>
 		<div id="results"></div>
+		<div id="err-msg" style="display: none;"><span>There was an error while loading more results</span></div>
 		<button id="load-more" disabled>Load More Results</button>
 	</div>
 
