updated links in wa, added resume

--- a/wa-resources/index.html
+++ b/wa-resources/index.html
@@ -85,8 +85,8 @@
 	 		<div id="settings-about" class="settings-container">
 	 			<h3>Ear Training: Parametric EQ</h3>
 	 			<ul class="link-list">
-	 				<li><a href="../../tutorial/eq/">Watch Tutorial</a></li>
-	 				<li><a href="../../">Back to Main Website</a></li>
+	 				<li><a href="https://www.youtube.com/watch?v=tizeNXQWAMY">Watch Tutorial</a></li>
+	 				<li><a href="/">Back to Main Website</a></li>
 	 			</ul>
 
 	 			<div class="spectrum-control-buttons">
