--- a/index.html
+++ b/index.html
@@ -42,35 +42,41 @@
 		<div class="content-wrap">
 			<h2>Projects</h2>
 			<div class="projects-container">
-				<a href="https://www.beatschool.io" class="project">
-						<img src="beatschool.jpg" class="project-image" alt="Screenshot of full stack project">
-						<div class="project-overlay"></div>
-						<span>Full Stack</span>
-				</a><!--
-				--><a href="wa-resources/" class="project">
+				<a href="wa-resources/" class="project">
 						<img src="eq.jpg" class="project-image" alt="Screenshot of Web Audio project">
+						<img src="eq-480.jpg" class="project-image" alt="Screenshot of Web Audio project">
 						<div class="project-overlay"></div>
 						<span>Web Audio</span>
 				</a><!--
-				--><a href="wiki-viewer" class="project">
-						<img src="wiki.jpg" class="project-image" alt="Screenshot of Wikipedia API project">
+				--><a href="https://www.beatschool.io" class="project">
+						<img src="beatschool.jpg" class="project-image" alt="Screenshot of full stack project">
+						<img src="beatschool-480.jpg" class="project-image" alt="Screenshot of full stack project">
 						<div class="project-overlay"></div>
-						<span>Wikipedia API</span>
-				</a><!--
-				--><a href="tribute-page/" class="project">
-						<img src="tribute.jpg" class="project-image" alt="Screenshot of responsive design project">
-						<div class="project-overlay"></div>
-						<span>Responsive Design</span>
-				</a><!--
-				--><a href="tic-tac-toe" class="project">
-						<img src="tic-tac-toe.jpg" class="project-image" alt="Screenshot of Tic Tac Toe project">
-						<div class="project-overlay"></div>
-						<span>Tic Tac Toe</span>
+						<span>Full Stack</span>
 				</a><!--
 				--><a href="cipher/" class="project">
 						<img src="cipher.jpg" class="project-image" alt="Screenshot of text cipher project">
+						<img src="cipher-480.jpg" class="project-image" alt="Screenshot of text cipher project">
 						<div class="project-overlay"></div>
 						<span>Text Cipher</span>
+				</a><!--
+				--><a href="quote-machine" class="project">
+						<img src="youtube.jpg" class="project-image" alt="Screenshot of Tic Tac Toe project">
+						<img src="youtube-480.jpg" class="project-image" alt="Screenshot of Tic Tac Toe project">
+						<div class="project-overlay"></div>
+						<span>YouTube API</span>
+				</a><!--
+				--><a href="tribute-page/" class="project">
+						<img src="tribute.jpg" class="project-image" alt="Screenshot of responsive design project">
+						<img src="tribute-480.jpg" class="project-image" alt="Screenshot of responsive design project">
+						<div class="project-overlay"></div>
+						<span>Responsive Design</span>
+				</a><!--
+				--><a href="wiki-viewer" class="project">
+						<img src="wiki.jpg" class="project-image" alt="Screenshot of Wikipedia API project">
+						<img src="wiki-480.jpg" class="project-image" alt="Screenshot of Wikipedia API project">
+						<div class="project-overlay"></div>
+						<span>Wikipedia API</span>
 				</a>
 			</div>
 		</div>
