moved profile images to new images folder

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="about-container">
 				<div class="img-wrap">
 					<img
-					src="me.jpg"
+					src="images/me.jpg"
 					alt="A picture of me"
 					>
 					<div class="img-overlay"></div>
@@ -43,32 +43,32 @@
 			<h2>Projects</h2>
 			<div class="projects-container">
 				<a href="wa-resources/" class="project">
-						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="eq-480.jpg 480w, eq.jpg 960w" src="eq.jpg" class="project-image" alt="Screenshot of Web Audio project">
+						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/eq-480.jpg 480w, images/eq.jpg 960w" src="images/eq.jpg" class="project-image" alt="Screenshot of Web Audio project">
 						<div class="project-overlay"></div>
 						<span>Web Audio</span>
 				</a><!--
 				--><a href="https://www.beatschool.io" class="project">
-						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="beatschool-480.jpg 480w, beatschool.jpg 960w" src="beatschool.jpg" class="project-image" alt="Screenshot of full stack project">
+						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/beatschool-480.jpg 480w, images/beatschool.jpg 960w" src="images/beatschool.jpg" class="project-image" alt="Screenshot of full stack project">
 						<div class="project-overlay"></div>
 						<span>Full Stack</span>
 				</a><!--
 				--><a href="cipher/" class="project">
-						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="cipher-480.jpg 480w, cipher.jpg 960w" src="cipher.jpg" class="project-image" alt="Screenshot of text cipher project">
+						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/cipher-480.jpg 480w, images/cipher.jpg 960w" src="images/cipher.jpg" class="project-image" alt="Screenshot of text cipher project">
 						<div class="project-overlay"></div>
 						<span>Text Cipher</span>
 				</a><!--
 				--><a href="quote-machine" class="project">
-						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="youtube-480.jpg 480w, youtube.jpg 960w" src="youtube.jpg" class="project-image" alt="Screenshot of Tic Tac Toe project">
+						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/youtube-480.jpg 480w, images/youtube.jpg 960w" src="images/youtube.jpg" class="project-image" alt="Screenshot of Tic Tac Toe project">
 						<div class="project-overlay"></div>
 						<span>YouTube API</span>
 				</a><!--
 				--><a href="tribute-page/" class="project">
-						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="tribute-480.jpg 480w, tribute.jpg 960w" src="tribute.jpg" class="project-image" alt="Screenshot of responsive design project">
+						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/tribute-480.jpg 480w, images/tribute.jpg 960w" src="images/tribute.jpg" class="project-image" alt="Screenshot of responsive design project">
 						<div class="project-overlay"></div>
 						<span>Responsive Design</span>
 				</a><!--
 				--><a href="wiki-viewer" class="project">
-						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="wiki-480.jpg 480w, wiki.jpg 960w" src="wiki.jpg" class="project-image" alt="Screenshot of Wikipedia API project">
+						<img sizes="(max-width: 35em) calc(1.2*(100vw - 4em)), (max-width: 42em) calc(1.2*(100vw - 12em)), (max-width: 60em) calc(0.6*(100vw - 12em)), (max-width: 74em) calc(0.4*(100vw - 16em)), calc(0.4*(58em))" srcset="images/wiki-480.jpg 480w, images/wiki.jpg 960w" src="images/wiki.jpg" class="project-image" alt="Screenshot of Wikipedia API project">
 						<div class="project-overlay"></div>
 						<span>Wikipedia API</span>
 				</a>
