--- a/calculator/index.html
+++ b/calculator/index.html
@@ -7,11 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link href="style.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
 </head>
 <body>
 	<div id="calculator">
-		<div class="row">
-			<p id="result">87687</p>
+		<div class="row display">
+			<div>
+				<p id="result">87687</p>
+			</div>
 		</div>
 		<div class="row">
 			<button class="modifier">AC</button>
