--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 				<p>Hi! I'm Howard, a front-end developer and electronic musician. My favorite kind of projects are interactive applications for the browser that get me writing a lot of JavaScript. Due to my interest in music, I've built a couple of web apps using the Web Audio API and HTML5 Canvas. I have a solid knowledge of responsive design using media queries, and some experience with Django for the back end. You can view some of my work in the portfolio below.
 				<br>
-				<span><a href="https://github.com/ivthefourth">GitHub</a></span><span><a href="howardshaw.pdf">Résumé</a></span></p>
+				<span><a href="blog">Blog</a></span><span><a href="https://github.com/ivthefourth">GitHub</a></span></p>
 			</div>
 		</div>
 	</section>
@@ -98,7 +98,7 @@
 		<div id="nav-wrap">
 			<h2>Menu</h2>
 			
-			<ul><li class="left-nav"><a href="#home" class="nav-link">Howard</a></li><li><a href="#about" class="nav-link">About</a></li><li><a href="#projects" class="nav-link">Projects</a></li><li><a href="#contact" class="nav-link">Contact</a></li>
+			<ul><li class="left-nav"><a href="#home" class="nav-link">Howard</a></li><li><a href="#about" class="nav-link">About</a></li><li><a href="#projects" class="nav-link">Projects</a></li><li><a href="#contact" class="nav-link">Contact</a><a href="blog">Blog</a></li>
 			</ul>
 		</div>
 	</nav>
