--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		<div id="nav-wrap">
 			<h2>Menu</h2>
 			
-			<ul><li class="left-nav"><a href="#home" class="nav-link">Howard</a></li><li><a href="#about" class="nav-link">About</a></li><li><a href="#projects" class="nav-link">Projects</a></li><li><a href="#contact" class="nav-link">Contact</a><a href="blog">Blog</a></li>
+			<ul><li class="left-nav"><a href="#home" class="nav-link">Howard</a></li><li><a href="#about" class="nav-link">About</a></li><li><a href="#projects" class="nav-link">Projects</a></li><li><a href="#contact" class="nav-link">Contact</a></li><li><a href="blog">Blog</a></li>
 			</ul>
 		</div>
 	</nav>
