--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			</ul>
 		</div>
 	</nav>
-	<script src="../js/jquery-2.2.3.min.js"></script>
+	<script src="js/jquery-2.2.3.min.js"></script>
 	<script src="portfolio.js"></script>
 </body>
 </html>
