--- a/calculator/index.html
+++ b/calculator/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Tic Tac Toe</title>
-	<meta name="description" content="Play Tic Tac Toe">
+	<title>Calculator</title>
+	<meta name="description" content="Js calculator inspired by ios calculator">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link href="style.css" rel="stylesheet">
@@ -41,7 +41,7 @@
 			<button class="operator">+</button>
 		</div>
 		<div class="row">
-			<button class="number double-wide">0</button>
+			<button class="number double-wide"><span>0</span></button>
 			<button class="number">.</button>
 			<button class="operator">=</button>
 		</div>
