calculator percent and negative

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -43,7 +43,7 @@
 		<div class="row">
 			<button data-btn-type="number" data-btn-value="0" class="number double-wide"><span>0</span></button>
 			<button data-btn-type="decimal" class="number">.</button>
-			<button data-btn-type="operator" data-btn-value="equals" class="operator">=</button>
+			<button data-btn-type="equals" class="operator">=</button>
 		</div>
 	</div>
 	<script src="calc.js"></script>
